edit descript dine

--- a/shops/shop0008.html
+++ b/shops/shop0008.html
@@ -91,8 +91,8 @@
                             </div>
                         </div>
                         <h1>50% discount on 18K white gold diamond ring and 18K white gold diamond earring</h1>
-                        <div class="description">Original price:
-                            HK$4,960 (diamond ring)
+                        <div class="description">Original price:<br>
+                            HK$4,960 (diamond ring)<br>
                             HK$7,600 (earring)</div>
                         <div class="btn-book"><a class="btn-cta print" href="https://www.dazzle.hk/en/"> <span
                                     class="label">Book
