--- a/shops/shop0018.html
+++ b/shops/shop0018.html
@@ -91,8 +91,8 @@
                             </div>
                         </div>
                         <h1>50% discount on every 2nd items</h1>
-                        <div class="description">Original Price:
-                            HK$488 for shirt
+                        <div class="description">Original Price:<br>
+                            HK$488 for shirt<br>
                             HK$2,970 for suit</div>
                         <div class="btn-book"><a class="btn-cta print" href="https://www.david-fashions.com/"> <span
                                     class="label">Book
