--- a/shops/shop0032.html
+++ b/shops/shop0032.html
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <h1>50% discount on ReFa Expression Platinum Serum (Product Code: RFPS1823C)</h1>
-                        <div class="description">Original Price: HK$790
+                        <div class="description">Original Price: HK$790<br>
                             Discounted Price: HK$395</div>
                         <div class="btn-book"><a class="btn-cta print" href="https://www.shlab.com.hk"> <span
                                     class="label">Book
