--- a/shops/shop0033.html
+++ b/shops/shop0033.html
@@ -92,7 +92,7 @@
                         </div>
                         <h1>50% discount on ReFa Face-Up Cream
                             (Product Code: RFUS2122C/M)</h1>
-                        <div class="description">Original Price: HK$420
+                        <div class="description">Original Price: HK$420<br>
                             Discounted Price: HK$210</div>
                         <div class="btn-book"><a class="btn-cta print" href="https://www.shlab.com.hk"> <span
                                     class="label">Book
