--- a/shops/shop0045.html
+++ b/shops/shop0045.html
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <h1>Special discount on Sun Protect Hydro Set</h1>
-                        <div class="description">Original Price: HK$525
+                        <div class="description">Original Price: HK$525<br>
                             Discounted Price: HK$225</div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Shop_45_outlet_address.pdf"> <span
                                     class="label">Book
@@ -130,6 +130,17 @@
                                         alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
                                     Tourism Services Scheme Shops</span>
                             </div>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h3>Offer Details</h3>
+                        <div class="content"> 
+                            <p>Set included:<br>
+                                1) Sun Protect Gel SPF30  15ml<br>
+                                2) Rose Otto Micellar Cleansing Water Gel  50ml<br>
+                                3) Rose Otto 24-hour Intense Hydrating Lotion  10ml<br>
+                                4) Rose Otto Facial Hydro Gel Mask  10ml</p>
+                            <p class="view-more"><a class="button" href>+ View More</a></p>
                         </div>
                     </div>
 <div class="book">
