--- a/shops/shop0053.html
+++ b/shops/shop0053.html
@@ -92,7 +92,7 @@
                         </div>
                         <h1>Buy one, get one free 6 Years Root Korean Red Ginseng Concentrated Drink Energy Plus+ (10
                             sachets)</h1>
-                        <div class="description">Original Price: HK$330
+                        <div class="description">Original Price: HK$330<br>
                             Discounted Price: HK$165
                         </div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Shop_53_outlet_address.pdf"> <span
