--- a/shops/shop0054.html
+++ b/shops/shop0054.html
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <h1>Buy one, get one free Colla Corii Asini Jujube (100g)</h1>
-                        <div class="description">Original Price: HK$30
+                        <div class="description">Original Price: HK$30<br>
                             Discounted Price: HK$15
                         </div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Shop_54_outlet_address.pdf"> <span
