--- a/shops/shop0062.html
+++ b/shops/shop0062.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1>50% discount on yellow croaker (1,000g)</h1>
-                        <div class="description">Original Price: HK$198
+                        <div class="description">Original Price: HK$198<br>
                             Discount Price: HK$98
                         </div>
                         <div class="btn-book"><a class="btn-cta print" href="http://www.charmingseabass.com/"> <span
