--- a/shops/shop0031.html
+++ b/shops/shop0031.html
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <h1>50% discount on ReFa Expression Rising Lotion (Product Code: RFRL1824C)</h1>
-                        <div class="description">Original Price: HK$570
+                        <div class="description">Original Price: HK$570<br>
                             Discounted Price: HK$285</div>
                         <div class="btn-book"><a class="btn-cta print" href="https://www.shlab.com.hk"> <span
                                     class="label">Book
