--- a/shops/shop0080.html
+++ b/shops/shop0080.html
@@ -119,7 +119,17 @@
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
-<div class="book">
+                        <div class="details">
+                            <h3>Offer Details</h3>
+                            <div class="content">
+                                <p>The promotion is applicable to UnionPay Credit and ATM Card with card number starting
+                                    with 62 (refers to "UnionPay Card"), except the RMB cards issued by specific Hong
+                                    Kong and Macau card issuing institutions. Qualified transaction must be settled via
+                                    UnionPay network.</p>
+                                <p class="view-more"><a class="button" href>+ View More</a></p>
+                            </div>
+                        </div>
+                        <div class="book">
                             <h3>How To Book</h3>
                             <div class="content">
                                 <p>Applicable for new customer aged 18 or above.
