--- a/shops/shop1138.html
+++ b/shops/shop1138.html
@@ -129,6 +129,13 @@
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
                     </div>
+                    <div class="details">
+                        <h3>Offer Details</h3>
+                        <div class="content"> 
+                            <p>Promotion offer and gift are subject to a first-come-first-served basis while stocks last.</p>
+                            <p class="view-more"><a class="button" href>+ View More</a></p>
+                        </div>
+                    </div>
 <div class="book">
                         <h3>How To Book</h3>
                         <div class="content">
