change meta homapage

--- a/dining.html
+++ b/dining.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:site_name" content="Hello Hong Kong HOLIDAY AT HOME">
+    <meta property="og:site_name" content="Open House Hong Kong">
     <meta property="og:type" content="website">
     <link rel="icon" href="assets/images/favicon.ico">
     <link rel="apple-touch-icon" href="/assets/images/commom/apple-touch-icon.png">
@@ -29,7 +29,7 @@
     <meta name="description"
         content="ฮ่องกงมีชื่อเสียงในด้านการทำอาหารที่มีชื่อเสียงระดับโลก ตั้งแต่ร้านอาหารชั้นเอกที่ได้รับรางวัลมิชลินสตาร์ ไปจนถึงชานมแบบเรียบง่าย เมืองนี้ตอบสนองทุกรสนิยมและงบประมาณ อย่ารอช้า! รีบจองตอนนี้เพื่อค้นพบอาหารจานโปรดจานใหม่ของคุณ แบ่งปันมื้ออาหารและเสียงหัวเราะกับเพื่อนเดินทางคนโปรดของคุณในเมืองนี้!">
     <meta name="keywords" content="Shopping discounts, deals, offers" />
-    <meta property="og:title" content="Shopping">
+    <meta property="og:title" content="Dining">
     <meta property="og:site_name" content="Hello Hong Kong HOLIDAY AT HOME">
     <meta property="og:description"
         content="ฮ่องกงมีชื่อเสียงในด้านการทำอาหารที่มีชื่อเสียงระดับโลก ตั้งแต่ร้านอาหารชั้นเอกที่ได้รับรางวัลมิชลินสตาร์ ไปจนถึงชานมแบบเรียบง่าย เมืองนี้ตอบสนองทุกรสนิยมและงบประมาณ อย่ารอช้า! รีบจองตอนนี้เพื่อค้นพบอาหารจานโปรดจานใหม่ของคุณ แบ่งปันมื้ออาหารและเสียงหัวเราะกับเพื่อนเดินทางคนโปรดของคุณในเมืองนี้!">
