--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta property="og:site_name" content="Consumer offers website">
+	<meta property="og:site_name" content="Open House Hong Kong">
 	<meta property="og:type" content="website">
 	<link rel="icon" href="assets/images/favicon.ico">
 	<link rel="apple-touch-icon" href="https://hkison.com/assets/images/common/apple-touch-icon.png">
