--- a/malls.html
+++ b/malls.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:site_name" content="Hello Hong Kong HOLIDAY AT HOME">
+    <meta property="og:site_name" content="Open House Hong Kong">
     <meta property="og:type" content="website">
     <link rel="icon" href="assets/images/favicon.ico">
     <link rel="apple-touch-icon" href="/assets/images/commom/apple-touch-icon.png">
@@ -29,7 +29,7 @@
     <meta name="description"
         content="หมดกังวลเรื่องการหาที่ช้อปปิ้งในฮ่องกง กับห้างสรรพสินค้าของเรามีอยู่มากมาย เราขอเชิญท่านมาเพลิดเพลินไปกับการช้อปปิ้ง ในช่วงวันหยุดที่มีของสำหรับทุกคน และข้อเสนอดีๆ ช้อป กินอิ่ม และประหยัดสุดคุ้มด้วยข้อเสนอสุดพิเศษสำหรับคุณโดยเฉพาะ">
     <meta name="keywords" content="Shopping discounts, deals, offers" />
-    <meta property="og:title" content="Shopping">
+    <meta property="og:title" content="Malls">
     <meta property="og:site_name" content="Hello Hong Kong HOLIDAY AT HOME">
     <meta property="og:description"
         content="หมดกังวลเรื่องการหาที่ช้อปปิ้งในฮ่องกง กับห้างสรรพสินค้าของเรามีอยู่มากมาย เราขอเชิญท่านมาเพลิดเพลินไปกับการช้อปปิ้ง ในช่วงวันหยุดที่มีของสำหรับทุกคน และข้อเสนอดีๆ ช้อป กินอิ่ม และประหยัดสุดคุ้มด้วยข้อเสนอสุดพิเศษสำหรับคุณโดยเฉพาะ">
