--- a/shopping.html
+++ b/shopping.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:site_name" content="Hello Hong Kong HOLIDAY AT HOME">
+    <meta property="og:site_name" content="Open House Hong Kong">
     <meta property="og:type" content="website">
     <link rel="icon" href="assets/images/favicon.ico">
     <link rel="apple-touch-icon" href="/assets/images/commom/apple-touch-icon.png">
