mall header active

--- a/malls.html
+++ b/malls.html
@@ -72,7 +72,7 @@
                 </li>
                 <li><a href="dining.html" id="food-and-drink"> <span class="label">อาหาร และเครื่องดื่ม</span><span
                             class="hover">อาหาร และเครื่องดื่ม</span></a></li>
-                <li><a href="malls.html" id="malls"> <span class="label">ห้างสรรพสินค้า</span><span
+                <li class="active"><a href="malls.html" id="malls"> <span class="label">ห้างสรรพสินค้า</span><span
                             class="hover">ห้างสรรพสินค้า</span></a></li>
                 <!-- <li><a href="#" id="tours"> <span class="label">Tours</span><span class="hover">Shop ON </span></a></li> -->
                 <!-- <li><a href="https://www.holidayhk.com/itineraries/en/" id="itineraries"> <span
