--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 						<div class="offer-block-grid swiper-slide"><a href="dining/food0026.html" target="_self">
 							<div class="flag">BUY 1 GET 1 FREE</div> 
 							<div class="thumbnail"><img class="lazy" src
-									data-original="assets\images\offer-details\EN_Dine_26_01.jpg"
+									data-original="assets/images/offer-details/EN_Dine_26_01.jpg"
 									alt="50% discount on Barbecued Pork with Honey Sauce (dine-in only)">
 								<div class="merchant-logo"><img
 										src="assets/images/offer-details/EN_Dine_26_logo.png"
@@ -304,7 +304,7 @@
 <div class="offer-block-grid swiper-slide"><a href="dining/food0027.html" target="_self">
 							<div class="flag">BUY 1 GET 1 FREE</div> 
 							<div class="thumbnail"><img class="lazy" src
-									data-original="assets\images\offer-details\EN_Dine_27_01.jpg"
+									data-original="assets/images/offer-details/EN_Dine_27_01.jpg"
 									alt="Buy one, get one free Premium Seasonal Kaiseki Menu">
 								<div class="merchant-logo"><img
 										src="assets/images/offer-details/EN_Dine_27_logo.png"
@@ -317,7 +317,7 @@
 						</a></div> 
 <div class="offer-block-grid swiper-slide"><a href="dining/food0049.html" target="_self">
 							<div class="thumbnail"><img class="lazy" src
-									data-original="assets\images\offer-details\EN_Dine_49_04.jpg"
+									data-original="assets/images/offer-details/EN_Dine_49_04.jpg"
 									alt="Around 34% discount on Hello Hong Kong Holiday@Home Menu (for 4 persons)">
 								<div class="merchant-logo"><img
 										src="assets/images/offer-details/EN_Dine_49_logo.jpg"
@@ -331,7 +331,7 @@
 <div class="offer-block-grid swiper-slide"><a href="dining/food0051.html" target="_self">
 							<div class="flag">BUY 1 GET 1 FREE</div> 
 							<div class="thumbnail"><img class="lazy" src
-									data-original="assets\images\offer-details\EN_Dine_51_01.jpg"
+									data-original="assets/images/offer-details/EN_Dine_51_01.jpg"
 									alt="Buy one, get one free Signature Dishes & Stew Set (for 2 persons)">
 								<div class="merchant-logo"><img
 										src="assets/images/offer-details/EN_Dine_51_logo.jpg"
@@ -344,7 +344,7 @@
 						</a></div>
 <div class="offer-block-grid swiper-slide"><a href="dining/food1140.html" target="_self">
 							<div class="thumbnail"><img class="lazy" src
-									data-original="assets\images\offer-details\Dine_1140_01.jpg"
+									data-original="assets/images/offer-details/Dine_1140_01.jpg"
 									alt="Promotion price of HK$1500 (plus 10% service charge) for designated set menu">
 								<div class="merchant-logo"><img
 										src="assets/images/offer-details/Dine_1140_logo.png"
@@ -357,7 +357,7 @@
 						</a></div> 
 <div class="offer-block-grid swiper-slide"><a href="dining/food1161.html" target="_self">
 							<div class="thumbnail"><img class="lazy" src
-									data-original="assets\images\offer-details\Dine_1161_01.jpg"
+									data-original="assets/images/offer-details/Dine_1161_01.jpg"
 									alt="Promotion price of HK$15 for Latte (S)">
 								<div class="merchant-logo"><img
 										src="assets/images/offer-details/Dine_1161_logo.png"
