--- a/shopping.html
+++ b/shopping.html
@@ -360,218 +360,43 @@
             <section class="offer-container is-onscreen enabled" style="transition-delay: 450ms;">
                 <h2 class="is-onscreen">ข้อเสนอเพิ่มเติม</h2>
                 <div class="cateFilter">
-                    <select class="regionSelect select2-hidden-accessible" data-select2-id="7" tabindex="-1"
-                        aria-hidden="true" style="">
-                        <option value="" data-select2-id="9">All Areas</option>
-                        <option value="Hong Kong Island">Hong Kong Island</option>
-                        <option value="Kowloon">Kowloon</option>
-                        <option value="New Territories">New Territories</option>
-                        <option value="Outlying Islands">Outlying Islands</option>
-                        <option value="九龍">九龍</option>
-                        <option value="新界">新界</option>
-                        <option value="離島">離島</option>
-                        <option value="香港島">香港島</option>
-                    </select><span class="select2 select2-container select2-container--default cateSel normal" dir="ltr"
-                        data-select2-id="8" style="width: auto;"><span class="selection"><span
-                                class="select2-selection select2-selection--single" role="combobox" aria-haspopup="true"
-                                aria-expanded="false" tabindex="0" aria-disabled="false"
-                                aria-labelledby="select2-c3ym-container"><span class="select2-selection__rendered"
-                                    id="select2-c3ym-container" role="textbox" aria-readonly="true"
-                                    title="All Areas">All Areas</span><span class="select2-selection__arrow"
-                                    role="presentation"><b role="presentation"></b></span></span></span><span
-                            class="dropdown-wrapper" aria-hidden="true"></span></span>
-                    <select class="districtSelect select2-hidden-accessible" data-select2-id="4" tabindex="-1"
-                        aria-hidden="true" style="">
-                        <option value="" data-select2-id="6">All Locations</option>
-                        <option value="Aberdeen">Aberdeen</option>
-                        <option value="Admiralty">Admiralty</option>
-                        <option value="Ap Lei Chau">Ap Lei Chau</option>
-                        <option value="Causeway Bay">Causeway Bay</option>
-                        <option value="Central">Central</option>
-                        <option value="Chai Wan">Chai Wan</option>
-                        <option value="Chek Lap Kok">Chek Lap Kok</option>
-                        <option value="Cheung Sha Wan">Cheung Sha Wan</option>
-                        <option value="Choi Hung">Choi Hung</option>
-                        <option value="Diamond Hill">Diamond Hill</option>
-                        <option value="Fanling">Fanling</option>
-                        <option value="Fo Tan">Fo Tan</option>
-                        <option value="Ho Man Tin">Ho Man Tin</option>
-                        <option value="Hung Hom">Hung Hom</option>
-                        <option value="Jordan">Jordan</option>
-                        <option value="Kam Tin">Kam Tin</option>
-                        <option value="Kennedy Town">Kennedy Town</option>
-                        <option value="Kowloon Bay">Kowloon Bay</option>
-                        <option value="Kowloon City">Kowloon City</option>
-                        <option value="Kowloon Tong">Kowloon Tong</option>
-                        <option value="Kwai Chung">Kwai Chung</option>
-                        <option value="Kwai Fong">Kwai Fong</option>
-                        <option value="Kwun Tong">Kwun Tong</option>
-                        <option value="LaI Chi Kok">LaI Chi Kok</option>
-                        <option value="Lam Tin">Lam Tin</option>
-                        <option value="Lantau Island">Lantau Island</option>
-                        <option value="Lo Wu">Lo Wu</option>
-                        <option value="Lok Fu">Lok Fu</option>
-                        <option value="Lok Ma Chau">Lok Ma Chau</option>
-                        <option value="Ma On Shan">Ma On Shan</option>
-                        <option value="Mei Foo">Mei Foo</option>
-                        <option value="Mid-Levels">Mid-Levels</option>
-                        <option value="Mong Kok">Mong Kok</option>
-                        <option value="New Territories">New Territories</option>
-                        <option value="Ngau Tau Kok">Ngau Tau Kok</option>
-                        <option value="North Point">North Point</option>
-                        <option value="Olympian City">Olympian City</option>
-                        <option value="Pok Fu Lam">Pok Fu Lam</option>
-                        <option value="Prince Edward">Prince Edward</option>
-                        <option value="Quarry Bay">Quarry Bay</option>
-                        <option value="Sai Wan Ho">Sai Wan Ho</option>
-                        <option value="Sai Ying Pun">Sai Ying Pun</option>
-                        <option value="San Po Kong">San Po Kong</option>
-                        <option value="Sau Mau Ping">Sau Mau Ping</option>
-                        <option value="Sha Tin">Sha Tin</option>
-                        <option value="Sham Shui Po">Sham Shui Po</option>
-                        <option value="Sham Tseng">Sham Tseng</option>
-                        <option value="Shau Kei Wan">Shau Kei Wan</option>
-                        <option value="Sheung Shui">Sheung Shui</option>
-                        <option value="Sheung Wan">Sheung Wan</option>
-                        <option value="Siu Sai Wan">Siu Sai Wan</option>
-                        <option value="Stanley">Stanley</option>
-                        <option value="Tai Kok Tsui">Tai Kok Tsui</option>
-                        <option value="Tai Koo">Tai Koo</option>
-                        <option value="Tai Po">Tai Po</option>
-                        <option value="Tai Wai">Tai Wai</option>
-                        <option value="Taikoo Shing">Taikoo Shing</option>
-                        <option value="The Peak">The Peak</option>
-                        <option value="Tin Shui Wai">Tin Shui Wai</option>
-                        <option value="To Kwa Wan">To Kwa Wan</option>
-                        <option value="Tseung Kwan O">Tseung Kwan O</option>
-                        <option value="Tsim Sha Tsui">Tsim Sha Tsui</option>
-                        <option value="Tsim Sha Tsui East">Tsim Sha Tsui East</option>
-                        <option value="Tsing Yi">Tsing Yi</option>
-                        <option value="Tsuen Wan">Tsuen Wan</option>
-                        <option value="Tsz Wan Shan">Tsz Wan Shan</option>
-                        <option value="Tuen Mun">Tuen Mun</option>
-                        <option value="Tung Chung">Tung Chung</option>
-                        <option value="Wan Chai">Wan Chai</option>
-                        <option value="West Kowloon">West Kowloon</option>
-                        <option value="Western District">Western District</option>
-                        <option value="Wong Chuk Hang">Wong Chuk Hang</option>
-                        <option value="Wong Tai Sin">Wong Tai Sin</option>
-                        <option value="Yau Ma Tei">Yau Ma Tei</option>
-                        <option value="Yau Tong">Yau Tong</option>
-                        <option value="Yuen Long">Yuen Long</option>
-                        <option value="上水">上水</option>
-                        <option value="上環">上環</option>
-                        <option value="中環">中環</option>
-                        <option value="九龍城">九龍城</option>
-                        <option value="九龍灣">九龍灣</option>
-                        <option value="佐敦">佐敦</option>
-                        <option value="何文田">何文田</option>
-                        <option value="元朗">元朗</option>
-                        <option value="北角">北角</option>
-                        <option value="土瓜灣">土瓜灣</option>
-                        <option value="堅尼地城">堅尼地城</option>
-                        <option value="大圍">大圍</option>
-                        <option value="大埔">大埔</option>
-                        <option value="大嶼山">大嶼山</option>
-                        <option value="大角咀">大角咀</option>
-                        <option value="天水圍">天水圍</option>
-                        <option value="將軍澳">將軍澳</option>
-                        <option value="小西灣">小西灣</option>
-                        <option value="尖沙咀">尖沙咀</option>
-                        <option value="尖沙咀東部">尖沙咀東部</option>
-                        <option value="屯門">屯門</option>
-                        <option value="彩虹">彩虹</option>
-                        <option value="慈雲山">慈雲山</option>
-                        <option value="新蒲崗">新蒲崗</option>
-                        <option value="旺角">旺角</option>
-                        <option value="東涌">東涌</option>
-                        <option value="柴灣">柴灣</option>
-                        <option value="樂富">樂富</option>
-                        <option value="沙田">沙田</option>
-                        <option value="油塘">油塘</option>
-                        <option value="油麻地">油麻地</option>
-                        <option value="深井">深井</option>
-                        <option value="深水埗">深水埗</option>
-                        <option value="灣仔">灣仔</option>
-                        <option value="火炭">火炭</option>
-                        <option value="牛池灣">牛池灣</option>
-                        <option value="牛頭角">牛頭角</option>
-                        <option value="石塘咀">石塘咀</option>
-                        <option value="石硤尾">石硤尾</option>
-                        <option value="秀茂坪">秀茂坪</option>
-                        <option value="筲箕灣">筲箕灣</option>
-                        <option value="粉嶺">粉嶺</option>
-                        <option value="紅磡">紅磡</option>
-                        <option value="美孚">美孚</option>
-                        <option value="荃灣">荃灣</option>
-                        <option value="荔枝角">荔枝角</option>
-                        <option value="葵涌">葵涌</option>
-                        <option value="葵芳">葵芳</option>
-                        <option value="薄扶林">薄扶林</option>
-                        <option value="藍田">藍田</option>
-                        <option value="西灣河">西灣河</option>
-                        <option value="西營盤">西營盤</option>
-                        <option value="西貢">西貢</option>
-                        <option value="觀塘">觀塘</option>
-                        <option value="赤柱">赤柱</option>
-                        <option value="跑馬地">跑馬地</option>
-                        <option value="銅鑼灣">銅鑼灣</option>
-                        <option value="鑽石山">鑽石山</option>
-                        <option value="長沙灣">長沙灣</option>
-                        <option value="長洲">長洲</option>
-                        <option value="青衣">青衣</option>
-                        <option value="香港仔">香港仔</option>
-                        <option value="馬鞍山">馬鞍山</option>
-                        <option value="鰂魚涌">鰂魚涌</option>
-                        <option value="鴨脷洲">鴨脷洲</option>
-                        <option value="黃大仙">黃大仙</option>
-                    </select><span class="select2 select2-container select2-container--default cateSel normal" dir="ltr"
-                        data-select2-id="5" style="width: auto;"><span class="selection"><span
-                                class="select2-selection select2-selection--single" role="combobox" aria-haspopup="true"
-                                aria-expanded="false" tabindex="0" aria-disabled="false"
-                                aria-labelledby="select2-f6t2-container"><span class="select2-selection__rendered"
-                                    id="select2-f6t2-container" role="textbox" aria-readonly="true"
-                                    title="All Locations">All Locations</span><span class="select2-selection__arrow"
-                                    role="presentation"><b role="presentation"></b></span></span></span><span
-                            class="dropdown-wrapper" aria-hidden="true"></span></span>
-                    <select class="cateSelect select2-hidden-accessible" data-select2-id="1" tabindex="-1"
-                        aria-hidden="true" style="">
-                        <option value="" data-select2-id="3">All Categories</option>
-                        <option value="Antiques, Arts &amp; Crafts">Antiques, Arts &amp; Crafts</option>
-                        <option value="Beauty">Beauty</option>
-                        <option value="Beauty &amp; Personal care">Beauty &amp; Personal care</option>
-                        <option value="Candy, Snacks &amp; Cake Shops">Candy, Snacks &amp; Cake Shops</option>
-                        <option value="Chinese Health &amp; Tonic Food">Chinese Health &amp; Tonic Food</option>
-                        <option value="Clothing &amp; Accessories">Clothing &amp; Accessories</option>
-                        <option value="Computers &amp; Electronics">Computers &amp; Electronics</option>
-                        <option value="Custom Tailors">Custom Tailors</option>
-                        <option value="Department Stores">Department Stores</option>
-                        <option value="Foodstuffs - Candy, Snacks &amp; Cake shops">Foodstuffs - Candy, Snacks &amp;
-                            Cake shops</option>
-                        <option value="Foodstuffs - Chinese Health, Health Foods &amp; Tonic Foods">Foodstuffs - Chinese
-                            Health, Health Foods &amp; Tonic Foods</option>
-                        <option value="Foodstuffs - Dried Seafood">Foodstuffs - Dried Seafood</option>
-                        <option value="Foodstuffs - Others">Foodstuffs - Others</option>
-                        <option value="Foodstuffs - Tea &amp; Liquors">Foodstuffs - Tea &amp; Liquors</option>
-                        <option value="Furniture, Home Decorations &amp; Household Products">Furniture, Home Decorations
-                            &amp; Household Products</option>
-                        <option value="General Merchandise">General Merchandise</option>
-                        <option value="Handbags, Luggage, Shoes &amp; Leather Goods">Handbags, Luggage, Shoes &amp;
-                            Leather Goods</option>
-                        <option value="Health &amp; Tonic Food">Health &amp; Tonic Food</option>
-                        <option value="Jewellery &amp; Watches">Jewellery &amp; Watches</option>
-                        <option value="Optical Goods">Optical Goods</option>
-                        <option value="Outdoors &amp; Sports">Outdoors &amp; Sports</option>
-                        <option value="Telecommunications Equipment">Telecommunications Equipment</option>
-                    </select><span class="select2 select2-container select2-container--default cateSel normal" dir="ltr"
-                        data-select2-id="2" style="width: auto;"><span class="selection"><span
-                                class="select2-selection select2-selection--single" role="combobox" aria-haspopup="true"
-                                aria-expanded="false" tabindex="0" aria-disabled="false"
-                                aria-labelledby="select2-x3q2-container"><span class="select2-selection__rendered"
-                                    id="select2-x3q2-container" role="textbox" aria-readonly="true"
-                                    title="All Categories">All Categories</span><span class="select2-selection__arrow"
-                                    role="presentation"><b role="presentation"></b></span></span></span><span
-                            class="dropdown-wrapper" aria-hidden="true"></span></span>
+                    <div class="tourFilter" data-selected=" Day(s) Selected"><a class="filterToggle" href="javascript:;"><span class="subtitle">Departure</span>
+                            <div class="selectedDays">Everyday</div></a>
+                        <ul class="daysContainer">
+                            <li>
+                                <input class="all" type="checkbox" name="dayFilter" id="filterEveryday" value="Everyday" checked="checked">
+                                <label for="filterEveryday">Everyday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFilter" id="filterMonday" value="Monday">
+                                <label for="filterMonday">Monday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFilter" id="filterTuesday" value="Tuesday">
+                                <label for="filterTuesday">Tuesday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFilter" id="filterWednesday" value="Wednesday">
+                                <label for="filterWednesday">Wednesday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFilter" id="filterThursday" value="Thursday">
+                                <label for="filterThursday">Thursday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFriday" id="filterFriday" value="Friday">
+                                <label for="filterFriday">Friday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFilter" id="filterSaturday" value="Saturday">
+                                <label for="filterSaturday">Saturday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFilter" id="filterSunday" value="Sunday">
+                                <label for="filterSunday">Sunday</label>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="offer-list-container">
                     <div class="offer-list" data-load-more="true" data-load-more-num="8" data-default-num="8"
