--- a/dining.html
+++ b/dining.html
@@ -345,127 +345,43 @@
             <section class="offer-container is-onscreen enabled" style="transition-delay: 450ms;">
                 <h2 class="is-onscreen" style="color: #DA1327;">ข้อเสนอเพิ่มเติม</h2>
                 <div class="cateFilter">
-                    <select class="regionSelect select2-hidden-accessible" data-select2-id="7" tabindex="-1"
-                        aria-hidden="true" style="">
-                        <option value="" data-select2-id="9">All Areas</option>
-                        <option value="Hong Kong Island">Hong Kong Island</option>
-                        <option value="Kowloon">Kowloon</option>
-                        <option value="New Territories">New Territories</option>
-                        <option value="Outlying Islands">Outlying Islands</option>
-                    </select><span class="select2 select2-container select2-container--default cateSel normal" dir="ltr"
-                        data-select2-id="8" style="width: auto;"><span class="selection"><span
-                                class="select2-selection select2-selection--single" role="combobox" aria-haspopup="true"
-                                aria-expanded="false" tabindex="0" aria-disabled="false"
-                                aria-labelledby="select2-sql9-container"><span class="select2-selection__rendered"
-                                    id="select2-sql9-container" role="textbox" aria-readonly="true"
-                                    title="All Areas">All Areas</span><span class="select2-selection__arrow"
-                                    role="presentation"><b role="presentation"></b></span></span></span><span
-                            class="dropdown-wrapper" aria-hidden="true"></span></span>
-                    <select class="districtSelect select2-hidden-accessible" data-select2-id="4" tabindex="-1"
-                        aria-hidden="true" style="">
-                        <option value="" data-select2-id="6">All Locations</option>
-                        <option value="Aberdeen">Aberdeen</option>
-                        <option value="Admiralty">Admiralty</option>
-                        <option value="Ap Lei Chau">Ap Lei Chau</option>
-                        <option value="Causeway Bay">Causeway Bay</option>
-                        <option value="Central">Central</option>
-                        <option value="Chai Wan">Chai Wan</option>
-                        <option value="Chek Lap Kok">Chek Lap Kok</option>
-                        <option value="Cheung Sha Wan">Cheung Sha Wan</option>
-                        <option value="Choi Hung">Choi Hung</option>
-                        <option value="Diamond Hill">Diamond Hill</option>
-                        <option value="Fanling">Fanling</option>
-                        <option value="Ho Man Tin">Ho Man Tin</option>
-                        <option value="Hung Hom">Hung Hom</option>
-                        <option value="Jordan">Jordan</option>
-                        <option value="Kennedy Town">Kennedy Town</option>
-                        <option value="Kowloon Bay">Kowloon Bay</option>
-                        <option value="Kowloon City">Kowloon City</option>
-                        <option value="Kowloon Tong">Kowloon Tong</option>
-                        <option value="Kwai Chung">Kwai Chung</option>
-                        <option value="Kwai Fong">Kwai Fong</option>
-                        <option value="Kwun Tong">Kwun Tong</option>
-                        <option value="LaI Chi Kok">LaI Chi Kok</option>
-                        <option value="Lam Tin">Lam Tin</option>
-                        <option value="Lamma Island">Lamma Island</option>
-                        <option value="Lantau Island">Lantau Island</option>
-                        <option value="Lei Yue Mun">Lei Yue Mun</option>
-                        <option value="Lok Fu">Lok Fu</option>
-                        <option value="Ma On Shan">Ma On Shan</option>
-                        <option value="Mei Foo">Mei Foo</option>
-                        <option value="Mid-Levels">Mid-Levels</option>
-                        <option value="Mong Kok">Mong Kok</option>
-                        <option value="Ngau Tau Kok">Ngau Tau Kok</option>
-                        <option value="North Point">North Point</option>
-                        <option value="Pok Fu Lam">Pok Fu Lam</option>
-                        <option value="Prince Edward">Prince Edward</option>
-                        <option value="Quarry Bay">Quarry Bay</option>
-                        <option value="Sai Kung">Sai Kung</option>
-                        <option value="Sai Wan Ho">Sai Wan Ho</option>
-                        <option value="Sai Ying Pun">Sai Ying Pun</option>
-                        <option value="San Po Kong">San Po Kong</option>
-                        <option value="Sha Tin">Sha Tin</option>
-                        <option value="Sham Shui Po">Sham Shui Po</option>
-                        <option value="Shau Kei Wan">Shau Kei Wan</option>
-                        <option value="Sheung Shui">Sheung Shui</option>
-                        <option value="Sheung Wan">Sheung Wan</option>
-                        <option value="Siu Sai Wan">Siu Sai Wan</option>
-                        <option value="Stanley">Stanley</option>
-                        <option value="Tai Hang">Tai Hang</option>
-                        <option value="Tai Kok Tsui">Tai Kok Tsui</option>
-                        <option value="Tai Po">Tai Po</option>
-                        <option value="Tai Wai">Tai Wai</option>
-                        <option value="Taikoo Shing">Taikoo Shing</option>
-                        <option value="The Peak">The Peak</option>
-                        <option value="Tin Shui Wai">Tin Shui Wai</option>
-                        <option value="Tseung Kwan O">Tseung Kwan O</option>
-                        <option value="Tsim Sha Tsui">Tsim Sha Tsui</option>
-                        <option value="Tsim Sha Tsui East">Tsim Sha Tsui East</option>
-                        <option value="Tsing Yi">Tsing Yi</option>
-                        <option value="Tsuen Wan">Tsuen Wan</option>
-                        <option value="Tsz Wan Shan">Tsz Wan Shan</option>
-                        <option value="Tuen Mun">Tuen Mun</option>
-                        <option value="Tung Chung">Tung Chung</option>
-                        <option value="Wan Chai">Wan Chai</option>
-                        <option value="West Kowloon">West Kowloon</option>
-                        <option value="Western District">Western District</option>
-                        <option value="Wong Chuk Hang">Wong Chuk Hang</option>
-                        <option value="Wong Tai Sin">Wong Tai Sin</option>
-                        <option value="Yau Ma Tei">Yau Ma Tei</option>
-                        <option value="Yau Tong">Yau Tong</option>
-                        <option value="Yuen Long">Yuen Long</option>
-                    </select><span class="select2 select2-container select2-container--default cateSel normal" dir="ltr"
-                        data-select2-id="5" style="width: auto;"><span class="selection"><span
-                                class="select2-selection select2-selection--single" role="combobox" aria-haspopup="true"
-                                aria-expanded="false" tabindex="0" aria-disabled="false"
-                                aria-labelledby="select2-6yru-container"><span class="select2-selection__rendered"
-                                    id="select2-6yru-container" role="textbox" aria-readonly="true"
-                                    title="All Locations">All Locations</span><span class="select2-selection__arrow"
-                                    role="presentation"><b role="presentation"></b></span></span></span><span
-                            class="dropdown-wrapper" aria-hidden="true"></span></span>
-                    <select class="cateSelect select2-hidden-accessible" data-select2-id="1" tabindex="-1"
-                        aria-hidden="true" style="">
-                        <option value="" data-select2-id="3">All Categories</option>
-                        <option value="Chinese">Chinese</option>
-                        <option value="European">European</option>
-                        <option value="Indian">Indian</option>
-                        <option value="Islamic / Halal">Islamic / Halal</option>
-                        <option value="Japanese">Japanese</option>
-                        <option value="Local Hong Kong Style">Local Hong Kong Style</option>
-                        <option value="Other Asian">Other Asian</option>
-                        <option value="Other Cuisine">Other Cuisine</option>
-                        <option value="Thai">Thai</option>
-                        <option value="Vietnamese">Vietnamese</option>
-                        <option value="Western">Western</option>
-                    </select><span class="select2 select2-container select2-container--default cateSel normal" dir="ltr"
-                        data-select2-id="2" style="width: auto;"><span class="selection"><span
-                                class="select2-selection select2-selection--single" role="combobox" aria-haspopup="true"
-                                aria-expanded="false" tabindex="0" aria-disabled="false"
-                                aria-labelledby="select2-cx1n-container"><span class="select2-selection__rendered"
-                                    id="select2-cx1n-container" role="textbox" aria-readonly="true"
-                                    title="All Categories">All Categories</span><span class="select2-selection__arrow"
-                                    role="presentation"><b role="presentation"></b></span></span></span><span
-                            class="dropdown-wrapper" aria-hidden="true"></span></span>
+                    <div class="tourFilter" data-selected=" Day(s) Selected"><a class="filterToggle" href="javascript:;"><span class="subtitle">Departure</span>
+                            <div class="selectedDays">Everyday</div></a>
+                        <ul class="daysContainer">
+                            <li>
+                                <input class="all" type="checkbox" name="dayFilter" id="filterEveryday" value="Everyday" checked="checked">
+                                <label for="filterEveryday">Everyday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFilter" id="filterMonday" value="Monday">
+                                <label for="filterMonday">Monday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFilter" id="filterTuesday" value="Tuesday">
+                                <label for="filterTuesday">Tuesday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFilter" id="filterWednesday" value="Wednesday">
+                                <label for="filterWednesday">Wednesday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFilter" id="filterThursday" value="Thursday">
+                                <label for="filterThursday">Thursday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFriday" id="filterFriday" value="Friday">
+                                <label for="filterFriday">Friday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFilter" id="filterSaturday" value="Saturday">
+                                <label for="filterSaturday">Saturday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="dayFilter" id="filterSunday" value="Sunday">
+                                <label for="filterSunday">Sunday</label>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="offer-list-container">
                     <div class="offer-list" data-load-more="true" data-load-more-num="8" data-default-num="8"
