--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 			<ul>
-				<li><a href="/eng/flights-and-packages" id="flights-and-packages"> <span class="label">ตั๋วเครื่องบิน
+				<li><a href="/eng/flights-and-packages" id="flights-and-packages" target="_self"> <span class="label">ตั๋วเครื่องบิน
 							และแพคเกจ</span><span class="hover">ตั๋วเครื่องบิน และแพ็กเกจ</span></a></li>
 				<!-- <li><a href="attractions.html" id="attractions"> <span class="label">สถานที่ท่องเที่ยว</span><span
 							class="hover">สถานที่ท่องเที่ยว</span></a></li> -->
