--- a/dining.html
+++ b/dining.html
@@ -70,7 +70,7 @@
                 <li><a href="shopping.html" id="shops"> <span class="label">ร้านค้า</span><span
                             class="hover">ร้านค้า</span></a>
                 </li>
-                <li class="active"><a href="#" id="food-and-drink"> <span class="label">อาหาร และเครื่องดื่ม</span><span
+                <li class="active"><a href="dining.html" id="food-and-drink"> <span class="label">อาหาร และเครื่องดื่ม</span><span
                             class="hover">อาหาร และเครื่องดื่ม</span></a></li>
                 <li><a href="malls.html" id="malls"> <span class="label">ห้างสรรพสินค้า</span><span
                             class="hover">ห้างสรรพสินค้า</span></a></li>
